cleaning up jafer: removing some dead code, using typed collections, reducing unnecessary object creation